--- a/Fragrance/Areas/Admin/Views/Order/Index.cshtml
+++ b/Fragrance/Areas/Admin/Views/Order/Index.cshtml
@@ -14,11 +14,11 @@
                 <tr>
                     <th>ID</th>
                     <th>Name</th>
-                    <th>Phone Number</th>
+                    <th>Phone</th>
                     <th>Email</th>
                     <th>Status</th>
                     <th>Total</th>
-                    <th></th>
+                    
                 </tr>
             </thead>
         </table>
@@ -26,6 +26,6 @@
     </div>
 </div>
 
-@section Script{
-    <script src="~/js/order.js"></script>
+@section Scripts{
+    <script src="~/js/site.js"></script>
 }
