--- a/Fragrance/Areas/Admin/Views/Parfume/Upsert.cshtml
+++ b/Fragrance/Areas/Admin/Views/Parfume/Upsert.cshtml
@@ -37,54 +37,74 @@
                         <div class="form-floating py-2 col-12">
                             <input asp-for="Parfum.Gender" class="form-control border-0 shadow" />
                             <label asp-for="Parfum.Gender" class="ms-2"></label>
-
                             <span asp-validation-for="Parfum.Gender" class="text-danger"></span>
                         </div>
                         <div class="form-floating py-2 col-12">
                             <input asp-for="Parfum.BaseNotes" class="form-control border-0 shadow" />
                             <label asp-for="Parfum.BaseNotes" class="ms-2"></label>
-
                             <span asp-validation-for="Parfum.BaseNotes" class="text-danger"></span>
-                        </div>
-                        <div class="form-floating py-2 col-12">
-                            <input asp-for="Parfum.ListPrice" class="form-control border-0 shadow" />
-                            <label asp-for="Parfum.ListPrice" class="ms-2"></label>
-
-                            <span asp-validation-for="Parfum.ListPrice" class="text-danger"></span>
-                        </div>
-                        <div class="form-floating py-2 col-12">
-                            <input asp-for="Parfum.Price" class="form-control border-0 shadow" />
-                            <label asp-for="Parfum.Price" class="ms-2"></label>
-
-                            <span asp-validation-for="Parfum.Price" class="text-danger"></span>
-                        </div>
-                        <div class="form-floating py-2 col-12">
-                            <input asp-for="Parfum.Price50" class="form-control border-0 shadow" />
-                            <label asp-for="Parfum.Price50" class="ms-2"></label>
-
-                            <span asp-validation-for="Parfum.Price50" class="text-danger"></span>
-                        </div>
-                        <div class="form-floating py-2 col-12">
-                            <input asp-for="Parfum.Price100" class="form-control border-0 shadow" />
-                            <label asp-for="Parfum.Price100" class="ms-2"></label>
-
-                            <span asp-validation-for="Parfum.Price100" class="text-danger"></span>
                         </div>
                         <div class="form-floating py-2 col-12">
                             <input asp-for="Parfum.TopNotes" class="form-control border-0 shadow" />
                             <label asp-for="Parfum.TopNotes" class="ms-2"></label>
-
                             <span asp-validation-for="Parfum.TopNotes" class="text-danger"></span>
                         </div>
                         <div class="form-floating py-2 col-12">
                             <input asp-for="Parfum.MiddleNotes" class="form-control border-0 shadow" />
                             <label asp-for="Parfum.MiddleNotes" class="ms-2"></label>
-
                             <span asp-validation-for="Parfum.MiddleNotes" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Parfum.ListPrice" class="form-control border-0 shadow" />
+                            <label asp-for="Parfum.ListPrice" class="ms-2"></label>
+                           <span asp-validation-for="Parfum.ListPrice" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Parfum.Price" class="form-control border-0 shadow" />
+                            <label asp-for="Parfum.Price" class="ms-2"></label>
+                            <span asp-validation-for="Parfum.Price" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Parfum.Price50" class="form-control border-0 shadow" />
+                            <label asp-for="Parfum.Price50" class="ms-2"></label>
+                            <span asp-validation-for="Parfum.Price50" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Parfum.Price100" class="form-control border-0 shadow" />
+                            <label asp-for="Parfum.Price100" class="ms-2"></label>
+                            <span asp-validation-for="Parfum.Price100" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Parfum.Size30" class="form-control border-0 shadow" />
+                            <label asp-for="Parfum.Size30" class="ms-2"></label>
+                            <span asp-validation-for="Parfum.Size30" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Parfum.Size50" class="form-control border-0 shadow" />
+                            <label asp-for="Parfum.Size50" class="ms-2"></label>
+                            <span asp-validation-for="Parfum.Size50" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Parfum.Size100" class="form-control border-0 shadow" />
+                            <label asp-for="Parfum.Size100" class="ms-2"></label>
+                            <span asp-validation-for="Parfum.Size100" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Parfum.Rating" class="form-control border-0 shadow" />
+                            <label asp-for="Parfum.Rating" class="ms-2"></label>
+                            <span asp-validation-for="Parfum.Rating" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Parfum.Quantity" class="form-control border-0 shadow" />
+                            <label asp-for="Parfum.Quantity" class="ms-2"></label>
+                            <span asp-validation-for="Parfum.Quantity" class="text-danger"></span>
                         </div>
 
 
-                  
+
+
+
+
                         <div class="form-floating py-2 col-12">
                             <input type="file" name="file" class="form-control border-0 shadow" />
                             <label asp-for="Parfum.ImgUrl" class="ms-2"></label>
