--- a/Fragrance/Areas/Costumer/Views/Cart/Index.cshtml
+++ b/Fragrance/Areas/Costumer/Views/Cart/Index.cshtml
@@ -13,7 +13,7 @@
 
             </div>
         </div>
-        <div class="card-body my-4">
+        <div class="card-body my-5">
             <div class="row">
             </div>
             <div class="row mb-3 pb-3">
@@ -25,19 +25,16 @@
                     @foreach (var item in Model.ShoppingCartsList)
                     {
                         <div class="row border-bottom pb-3">
-                            <div class="d-none d-lg-block col-lg-1 text-center py-2">
-                               
-                               
-                                    <img src="@item.Parfume.ImgUrl" class="card-img-top rounded w-100" />
-                               
+                            <div class="col-md-1 py-4">
+                                <img src="@item.Parfume.ImgUrl" class="card-img-top rounded w-100" />
                             </div>
                             <div class="col-12 col-lg-6 pt-md-3">
                                 <h5 class="text-uppercase text-secondary"><strong>@item.Parfume.Name</strong></h5>
                                 <p><small>@Html.Raw(item.Parfume.description)</small></p>
                             </div>
-                            <div class="col-12  col-lg-5 text-center row">
-                                <div class="col-3 text-md-right pt-2 pt-md-4">
-                                    <h6 class="fw-semibold">
+                            <div class="col-auto  col-lg-5 text-center row">
+                                <div class="col-3 text-md-right pt-lg-2 pt-md-4" style="min-width: 100px;">
+                                    <h6 class="fw-semibold p-0 text-nowrap">
                                         @item.Price.ToString("c")
                                         <span class="text-muted">&nbsp;x&nbsp;</span>@item.Count
                                     </h6>
