--- a/Fragrance/Areas/Costumer/Views/Home/Details.cshtml
+++ b/Fragrance/Areas/Costumer/Views/Home/Details.cshtml
@@ -26,23 +26,22 @@
                     </div>
                     <div class="col-12 col-lg-6 offset-lg-1">
 
-                        <div class="col-12 col-md-6 pb-4">
-                            <span class="badge">Parfume</span>
-                        </div>
-                        <div class="row ps-2">
-                            <h6 class="text-dark text-opacity-50 ">Gender : @Model.Parfume.Gender</h6>
-                        </div>
-                        <div class="row pl-2 my-3">
+
+                        <div class="form-text row pl-2 my-3">
+
                             TopNotes:<p class="text-secondary lh-sm">@Model.Parfume.TopNotes</p>
                             BaseNotes:<p class="text-secondary lh-sm">@Model.Parfume.BaseNotes</p>
                             MiddleNotes:<p class="text-secondary lh-sm">@Model.Parfume.MiddleNotes</p>
                         </div>
-                           
+
                         <div class="row ps-2">
+                            <div class="row ps-2">
+                                <h6 class="text-dark text-opacity-50 ">Gender : @Model.Parfume.Gender</h6>
+                            </div>
                             <h6 class="text-dark text-opacity-50  pb-2">
                                 List Price:
                                 <span class="text-decoration-line-through">
-                                    @Model.Parfume.ListPrice
+                                    @Model.Parfume.ListPrice$
                                 </span>
                             </h6>
                         </div>
@@ -62,16 +61,16 @@
                         </div>
                         <div class="row text-center ps-2">
                             <div class="p-1 col-3 col-lg-2 bg-white text-warning fw-bold">
-                                <div>Price</div>
+                                <div>Price </div>
                             </div>
                             <div class="p-1 col-3 col-lg-2 bg-white text-warning fw-bold">
-                                <div>@Model.Parfume.Price</div>
+                                <div>@Model.Parfume.Price $</div>
                             </div>
                             <div class="p-1 col-3 col-lg-2 bg-white text-warning fw-bold">
-                                <div>@Model.Parfume.Price50</div>
+                                <div>@Model.Parfume.Price50 $</div>
                             </div>
                             <div class="p-1 col-3 col-lg-2 bg-white text-warning fw-bold">
-                                <div>@Model.Parfume.Price100</div>
+                                <div>@Model.Parfume.Price100 $</div>
                             </div>
                         </div>
                         <div class="row pl-2 my-3">
@@ -84,8 +83,8 @@
                                           id="inputGroup-sizing-default">
                                         Count
                                     </span>
-                                    <input asp-for="Count" type="number" value="@Model.Count" class="form-control" 
-                                    class="form-control text-end"
+                                    <input asp-for="Count" type="number" value="@Model.Count" class="form-control"
+                                           class="form-control text-end"
                                            aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" />
 
                                 </div>
