--- a/Fragrance/Views/Shared/_Layout.cshtml
+++ b/Fragrance/Views/Shared/_Layout.cshtml
@@ -7,8 +7,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Fragrance</title>
+
     <script type="importmap"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Fragrance.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -32,26 +34,38 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Costumer" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Order    " asp-action="Index">Privacy</a>
-                        </li>
-                        @if(User.IsInRole(SD.Role_Admin)){
-                            <li class="nav-item">
-                                <a class="nav-link text-dark text-dark" asp-area="Admin" asp-controller="Parfume" asp-action="Index">Parfume
-                                    <i class="bi bi-database-fill-gear"></i>
-                                </a>
-                                <a class="nav-link text-dark text-dark" asp-area="Admin" asp-controller="Company" asp-action="Index">
-                                    Company
-                                    <i class="bi bi-database-fill-gear"></i>
-                                </a>
-                                <a class="nav-link text-dark text-dark" asp-area="Identity" asp-page="/Account/Register" >
-                                    Create User
-                                    <i class="bi bi-database-fill-gear"></i>
-                                </a>
-                               
 
+                        @if (User.IsInRole(SD.Role_Admin))
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-dark" href="#" id="adminDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Admin <i class="bi bi-gear-fill"></i>
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="adminDropdown">
+                                    <li>
+                                        <a class="dropdown-item" asp-area="Admin" asp-controller="Parfume" asp-action="Index">
+                                            Parfume <i class="bi bi-database-fill-gear"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="Index">
+                                            Company <i class="bi bi-database-fill-gear"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Register">
+                                            Create User <i class="bi bi-database-fill-gear"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" asp-area="Admin" asp-controller="Order" asp-action="Index">
+                                            Orders <i class="bi bi-database-fill-gear"></i>
+                                        </a>
+                                    </li>
+                                </ul>
                             </li>
                         }
+                        
                        
                             
                         
@@ -62,11 +76,6 @@
                                 </a>
                             </li>
 
-                      
-                        <form method="get" asp-action="Index">
-                            <input type="text" id="searchBox" name="searchString" value="@ViewBag.SearchString" placeholder="Search parfumes..." class="form-control me-sm-2" style="width: 680px; display: inline-block;" />
-                            <button type="submit" class="btn btn-outline-dark">Search</button>
-                        </form>
                        
                         
                     </ul>
@@ -89,6 +98,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="//cdn.datatables.net/2.2.2/js/dataTables.min.js" asp-append-version="true"></script>
     <script src="https://cdn.tiny.cloud/1/cjilvjuwlankq11fna2n0wx47sny7e62pp2xod709rnw6qia/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
+    
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
