--- a/Fragrance/Views/Shared/_Layout.cshtml
+++ b/Fragrance/Views/Shared/_Layout.cshtml
@@ -35,6 +35,8 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Costumer" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                      
+
 
                         @if (User.IsInRole(SD.Role_Admin))
                         {
@@ -60,6 +62,11 @@
                                     </li>
                                     <li>
                                         <a class="dropdown-item" asp-area="Admin" asp-controller="Order" asp-action="Index">
+                                            Orders <i class="bi bi-database-fill-gear"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" asp-area="Admin" asp-controller="Dashboard" asp-action="Index">
                                             Orders <i class="bi bi-database-fill-gear"></i>
                                         </a>
                                     </li>
@@ -99,7 +106,8 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-   
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
 
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
