--- a/Fragrance/Views/Shared/_Layout.cshtml
+++ b/Fragrance/Views/Shared/_Layout.cshtml
@@ -70,6 +70,11 @@
                                             Orders <i class="bi bi-database-fill-gear"></i>
                                         </a>
                                     </li>
+                                    <li>
+                                        <a class="dropdown-item" asp-area="Admin" asp-controller="User" asp-action="Index">
+                                            Users <i class="bi bi-database-fill-gear"></i>
+                                        </a>
+                                    </li>
                                 </ul>
                             </li>
                         }
