--- a/Fragrance/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Fragrance/Areas/Identity/Pages/Account/Login.cshtml
@@ -3,19 +3,13 @@
 @inject IConfiguration configuration
 @{
     ViewData["Title"] = "Log in";
-    var siteKey = configuration["reCaptchaSettings:SiteKey"];
-}
-
-
-<script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
-        async defer>
-</script>
+ }
 <h1>@ViewData["Title"]</h1>
 <div class="row">
     <div class="col-md-4">
         <section>
             <form id="account" method="post" >
-                <input type="hidden" asp-for="RecaptchaToken" id="recaptchaToken" />
+                <input type="hidden" asp-for="RecaptchaToken" />
 
                 <h2>Use a local account to log in.</h2>
                 <hr />
@@ -37,7 +31,7 @@
                     </label>
                 </div>
                 <div class="form-group my-3">
-                    <div class="g-recaptcha" data-sitekey="@siteKey"></div>
+                   
                     <span class="text-danger" id="recaptchaError"></span>
                 </div>
                 <div>
@@ -91,20 +85,4 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-  
-
-    <script>
-        function onSubmit(event) {
-            event.preventDefault();
-
-            var recaptchaResponse = grecaptcha.getResponse();
-            if (!recaptchaResponse) {
-                document.getElementById("recaptchaError").textContent = "Please complete the reCAPTCHA.";
-                return false;
-            }
-
-            document.getElementById("recaptchaToken").value = recaptchaResponse;
-            document.getElementById("account").submit();
-        }
-    </script>
 }
