--- a/Fragrance/Views/Shared/_Layout.cshtml
+++ b/Fragrance/Views/Shared/_Layout.cshtml
@@ -1,6 +1,11 @@
 ﻿@using Fragrance.Utility
 @using Microsoft.AspNetCore.Http
+@using System.Security.Claims
 @inject IHttpContextAccessor HttpContextAccessor
+@{
+    string cookiePrefix = Context.User.Identity.IsAuthenticated ? $"_{Context.User.FindFirst(ClaimTypes.NameIdentifier)?.Value}" : "";
+    var theme = Context.Request.Cookies[$"UserTheme{cookiePrefix}"] ?? "light";
+}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,18 +21,26 @@
     <link rel="stylesheet" href="~/Fragrance.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="//cdn.datatables.net/2.2.2/css/dataTables.dataTables.min.css" />
+    @if (theme == "light")
+    {
+        <link rel="stylesheet" href="~/css/site.css" />
+    }
+    else
+    {
+        <link rel="stylesheet" href="~/lib/\bootstrap/dist/css/dark.css" />
+    }
 </head>
-<body>
+<body class="@theme">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Fragrance</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
+                        aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                 
+
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Costumer" asp-controller="Home" asp-action="Index">Home</a>
@@ -35,7 +48,8 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Costumer" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                      
+
+                    
 
 
                         @if (User.IsInRole(SD.Role_Admin))
@@ -78,36 +92,36 @@
                                 </ul>
                             </li>
                         }
-                        
-                       
-                            
-                        
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="Costumer" asp-controller="Cart" asp-action="Index">
-                                    Shopping Cart
-                                   @await Component.InvokeAsync("ShoppingCart");
-                                </a>
-                            </li>
 
-                       
-                        
+
+
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Costumer" asp-controller="Cart" asp-action="Index">
+                                Shopping Cart
+                                @await Component.InvokeAsync("ShoppingCart");
+                            </a>
+                        </li>
+
+
+
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
     </header>
-  
 
-  
+
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-   
-   
+
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -137,3 +151,15 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+<script>
+    document.getElementById('toggle-theme').addEventListener('click', () => {
+      const current = document.cookie.match(/(^|;)\s*site-theme=([^;]+)/)?.[2] || 'light';
+      const next = current === 'dark' ? 'light' : 'dark';
+
+      fetch('@Url.Action("SetTheme", "Home")', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+        body: 'theme=' + next
+      }).then(() => location.reload());
+    });
+</script>
