--- a/Fragrance/Areas/Admin/Views/Order/Details.cshtml
+++ b/Fragrance/Areas/Admin/Views/Order/Details.cshtml
@@ -1,7 +1,6 @@
-﻿@model OrderVM
+﻿@model OrderVM  
 <form method="post">
-    <input asp-for="OrderHeader.Id" hidden />
-    <br />
+    <input asp-for="OrderHeader.Id" hidden />  <!-- Correct reference -->
     <div class="container">
         <div class="card">
             <div class="card-header bg-dark text-light ml-0">
@@ -35,7 +34,6 @@
                                     {
                                         <input asp-for="OrderHeader.Name" readonly type="text" class="form-control" />
                                     }
-
                                 </div>
                             </div>
                             <div class="row my-1">
@@ -136,14 +134,14 @@
                             <div class="row my-1">
                                 <div class="col-3">Tracking</div>
                                 <div class="col-9">
-                                   @*  @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
+                                    @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
                                     {
                                         <input asp-for="OrderHeader.TrackingNumber" id="trackingNumber" type="text" class="form-control" />
                                     }
                                     else
                                     {
                                         <input asp-for="OrderHeader.TrackingNumber" readonly type="text" class="form-control" />
-                                    } *@
+                                    }
                                 </div>
                             </div>
                             <div class="row my-1">
@@ -158,29 +156,23 @@
                                 <div class="row my-1">
                                     <div class="col-3">Session ID</div>
                                     <div class="col-9">
-
                                         <input asp-for="OrderHeader.SessionId" readonly type="text" class="form-control" />
-
                                     </div>
                                 </div>
                                 <div class="row my-1">
                                     <div class="col-3">Payment Intent ID</div>
                                     <div class="col-9">
-
                                         <input asp-for="OrderHeader.PaymentIntentId" readonly type="text" class="form-control" />
-
                                     </div>
                                 </div>
                             }
                             <div class="row my-1">
-
                                 @if (Model.OrderHeader.SessionId == null)
                                 {
                                     <div class="col-3">Payment Due Date</div>
                                     <div class="col-9">
                                         <input value="@Model.OrderHeader.PaymentDueData.ToShortDateString()" readonly type="text" class="form-control" />
                                     </div>
-
                                 }
                                 else
                                 {
@@ -189,14 +181,8 @@
                                         <input value="@Model.OrderHeader.PaymentDate.ToShortDateString()" readonly type="text" class="form-control" />
                                     </div>
                                 }
-
                             </div>
-                            <div class="row my-1">
-                                <div class="col-3">Payment Status</div>
-                                <div class="col-9">
-                                    <input asp-for="OrderHeader.PaymentStatus" readonly type="text" class="form-control" />
-                                </div>
-                            </div>
+                     
                             @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
                             {
                                 <button type="submit" asp-action="UpdateOrderDetail" class="btn btn-warning form-control my-1">Update Order Details</button>
@@ -214,7 +200,6 @@
                                     <li class="list-group-item d-flex justify-content-between p-2">
                                         <div class="row container">
                                             <div class="col-8">
-
                                                 <h6 class="my-0 text-primary">@detail.Parfume.Name</h6>
                                                 <small class="text-muted">Price : @detail.Price.ToString("c")</small><br />
                                                 <small class="text-muted">Quantity : @detail.Count</small>
@@ -237,11 +222,7 @@
                                 </li>
                             </ul>
 
-                            @if (Model.OrderHeader.PaymentStatus == SD.PaymentStatusDelayedPayment &&
-                            Model.OrderHeader.OrderStatus == SD.StatusShipped)
-                            {
-                                <button type="submit" class="btn btn-success form-control my-1">Pay Now</button>
-                            }
+                          
                             @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
                             {
                                 @if (Model.OrderHeader.OrderStatus == SD.StatusApproved)
@@ -256,12 +237,10 @@
                                     <button type="submit" asp-action="ShipOrder" onclick="return validateInput()" class="btn btn-primary form-control my-1">Ship Order</button>
                                 }
 
-                                @if (Model.OrderHeader.OrderStatus != SD.StatusRefunded &&
-                               Model.OrderHeader.OrderStatus != SD.StatusCancelled &&
-                               Model.OrderHeader.OrderStatus != SD.StatusShipped)
-                                {
+                               
+                                
                                     <button asp-action="CancelOrder" type="submit" class="btn btn-danger form-control my-1">Cancel Order</button>
-                                }
+                                
                             }
                         </div>
                     </div>
@@ -270,31 +249,27 @@
         </div>
     </div>
 </form>
-
-
 @section Scripts {
-
     <partial name="_ValidationScriptsPartial" />
     <script>
         function validateInput(){
-            if(document.getElementById("trackingNumber").value==""){
-                Swal.fire({
-                    icon: 'error',
-                    title: 'Oops...',
-                    text: 'Please enter tracking number!',
-                });
-                return false;
-            }
-            if (document.getElementById("carrier").value =="") {
-                Swal.fire({
-                    icon: 'error',
-                    title: 'Oops...',
-                    text: 'Please enter carrier!',
-                });
-                return false;
-            }
-            return true;
+        if(document.getElementById("trackingNumber").value==""){
+        Swal.fire({
+        icon: 'error',
+        title: 'Oops...',
+        text: 'Please enter tracking number!',
+        });
+        return false;
+        }
+        if (document.getElementById("carrier").value =="") {
+        Swal.fire({
+        icon: 'error',
+        title: 'Oops...',
+        text: 'Please enter carrier!',
+        });
+        return false;
+        }
+        return true;
         }
     </script>
-
 }
